--- a/client/fruits/admin.fruits.view.html
+++ b/client/fruits/admin.fruits.view.html
@@ -24,22 +24,18 @@
         </div>
     </nav>
 
-    <!--<div class="row">-->
-        <!--<div class="col-xs-18 col-sm-6 col-md-3">-->
-            <div class="thumbnail fruit-item col-md-2" ng-repeat="fruit in fruits | filter:search" ng-click="goToFruit(categoryName, fruit.id)">
-                <div class="text-center" ng-if="fruit.image">
-                    <img src="../uploads/{{fruit.image}}" height="120">
-                </div>
-                <div class="text-center" ng-else>
-                    <img src="../uploads/no-image.png" height="120">
-                </div>
-                <div class="caption">
-                    <h4 class="text-center">{{fruit.name}}</h4>
-                    <p class="text-center">{{fruit.price | currency}}</p>
-                </div>
-            </div>
-        <!--</div>-->
-    <!--</div>-->
+    <div class="thumbnail fruit-item col-xs-4 col-sm-3 col-md-2 col-lg-2" ng-repeat="fruit in fruits | filter:search" ng-click="goToFruit(categoryName, fruit.id)">
+        <div class="text-center" ng-if="fruit.image">
+            <img src="../uploads/{{fruit.image}}" height="100">
+        </div>
+        <div class="text-center" ng-else>
+            <img src="../uploads/no-image.png" height="100">
+        </div>
+        <div class="caption">
+            <h4 class="text-center">{{fruit.name}}</h4>
+            <p class="text-center">{{fruit.price | currency}}</p>
+        </div>
+    </div>
 
 </div>
 
