--- a/client/fruits/fruits.view.html
+++ b/client/fruits/fruits.view.html
@@ -13,6 +13,10 @@
     </div>
 </form>
 
+
+
+
+
 <div id="resultFruit">
     <nav class="navbar">
         <div id = "categories-menu" class="menu">
@@ -24,24 +28,21 @@
         </div>
     </nav>
 
-    <!--<div class="row">-->
-        <!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-            <div class="thumbnail fruit-item col-md-2" data-name="{{fruit.name}}" data-price="{{fruit.price}}" data-fid="{{fruit.id}}" id="fruit-{{fruit.id}}" ng-repeat="fruit in fruits | filter:search" ng-click="showFruitPopup(categoryName, fruit.id)">
-                <div class="text-center" ng-if="fruit.image">
-                    <img src="../uploads/{{fruit.image}}" height="120">
-                </div>
-                <div class="text-center" ng-else>
-                    <img src="../uploads/no-image.png" height="120">
-                </div>
-                <div class="caption">
-                    <h4 class="text-center">{{fruit.name}}</h4>
-                    <p class="text-center">{{fruit.price | currency}}</p>
-                </div>
-            </div>
-        <!--</div>-->
-    <!--</div>-->
+    <div class="thumbnail fruit-item col-xs-4 col-sm-3 col-md-2 col-lg-2" data-name="{{fruit.name}}" data-price="{{fruit.price}}" data-fid="{{fruit.id}}" id="fruit-{{fruit.id}}" ng-repeat="fruit in fruits | filter:search" ng-click="showFruitPopup(categoryName, fruit.id)">
+        <div class="text-center" ng-if="fruit.image">
+            <img src="../uploads/{{fruit.image}}" height="100">
+        </div>
+        <div class="text-center" ng-else>
+            <img src="../uploads/no-image.png" height="100">
+        </div>
+        <div class="caption">
+            <h4 class="text-center">{{fruit.name}}</h4>
+            <p class="text-center">{{fruit.price | currency}}</p>
+        </div>
+    </div>
 
 </div>
+
 
 <div id="element" class="container">
     <div ng-include="'cart/cart.view.html'"></div>
