--- a/client/auth/index.html
+++ b/client/auth/index.html
@@ -1,10 +1,10 @@
 <div id="index" class="flex-container">
-    <div class="part part-1 login bordered-right" >
+    <div class="part part-1 login bordered-right text-center">
             <div class="col-md-offset-1 col-md-10" id="section1">
                 <div ng-include="'auth/loginForm.html'"></div>
             </div>
     </div>
-    <div class="part part-2 commercial bordered-right">
+    <div class="part part-2 commercial bordered-right text-center">
         Why you should shop in our store? <br>
         Why buy it in stores when you can get it <br>
         literally shipped to your house AND it's cheaper? <br>
@@ -12,5 +12,13 @@
     </div>
     <div class="part part-3 notifications bordered-right">
         Available products in our store -
+        <br><br>
+        <span id="information">
+            Notification:
+            <br>
+            You have open cart from
+            <br>
+            Total sum: {{ totalSum | currency }}
+        </span>
     </div>
 </div>
