--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
             <div class="menu">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <img src="images/SuperMarket.png" class="img-fluid img-thumbnail"  width="170" height="170" alt="Responsive image">
+                        <a href="/"><img src="images/SuperMarket.png" class="img-fluid img-thumbnail"  width="170" height="170" alt="Responsive image"></a>
                     </div>
                     <div ng-model="user">
                         <div ng-if="isClient(user.role) || isAdmin(user.role)">
