get products count on main page

--- a/client/auth/index.html
+++ b/client/auth/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="part part-3 notifications bordered-right">
         <div id="numbers">
-            Available products in our store - {{fruits.length}}
+            Available products in our store - {{fruitsCount}}
             <br><br>
             Number of orders submitted in our store - {{orders.length}}
             <br><br>
