--- a/client/order/order.view.html
+++ b/client/order/order.view.html
@@ -13,19 +13,10 @@
     </div>
 </form>
 
-<div id="resultFruit">
-
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-10 col-md-9">
-            <div id="frmOrder" class="thumbnail fruit-item media-body">
-                <div ng-include="'order/orderForm.html'"></div>
-            </div>
-        </div>
-    </div>
-
+<div id="frmOrder" class="thumbnail fruit-item pull-right">
+    <div ng-include="'order/orderForm.html'"></div>
 </div>
 
-<div class="container">
+<div class="container pull-left">
     <div ng-include="'cart/cart.order.view.html'"></div>
 </div>
