--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../angular-modal/modal.css">
         <script src="../angular/angular.min.js"></script>
         <script src="../angular-route/angular-route.min.js"></script>
+        <script src="../angular-middleware/dist/angular-middleware.min.js"></script>
         <script src="../angular-modal/modal.js"></script>
 
         <script src="js/elif.js"></script>
