number of orders

--- a/client/auth/index.html
+++ b/client/auth/index.html
@@ -19,7 +19,7 @@
         <div id="numbers">
             Available products in our store - {{fruitsCount}}
             <br><br>
-            Number of orders submitted in our store - {{orders.length}}
+            Number of orders submitted in our store - {{ordersCount}}
             <br><br>
         </div>
         <div id="information" ng-model="user">
