--- a/client/auth/index.html
+++ b/client/auth/index.html
@@ -27,7 +27,7 @@
                 Notification:
                 <br>
                 <div>
-                    You have open cart from
+                    You have open cart from {{ cartDate }}
                     <br>
                     Total sum: {{ totalSum | currency }}
                 </div>
