Revert "creation date"
This reverts commit f874b70153f922ee152851961686b07e82caed90.

--- a/client/auth/index.html
+++ b/client/auth/index.html
@@ -27,7 +27,7 @@
                 Notification:
                 <br>
                 <div>
-                    You have open cart from {{ cartDate }}
+                    You have open cart from
                     <br>
                     Total sum: {{ totalSum | currency }}
                 </div>
