login form defaults

--- a/client/auth/dashboard.html
+++ b/client/auth/dashboard.html
@@ -10,7 +10,7 @@
             <a href="#!/category/fruits" class="btn btn-info" role="button">Start shopping</a>
         </div>
         <div id="cart-link">
-            Your cart
+            <!--Your cart-->
         </div>
     </div>
 </div>
