--- a/client/order/orderForm.html
+++ b/client/order/orderForm.html
@@ -53,7 +53,7 @@
     </fieldset>
     <div class="wrapper">
         <span class="group-btn">
-            <button class="btn btn-primary btn-md center-block" ng-click="makeOrder(order); goToMessage()" type="button"
+            <button class="btn btn-primary btn-md center-block" ng-click="makeOrder(order);" type="button"
                     ng-disabled="orderForm.deliveryCity.$invalid || orderForm.deliveryStreet.$invalid || orderForm.shippingDate.$invalid || orderForm.creditCard.$invalid">Order</button>
         </span>
     </div>
