--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href='../bootstrap/dist/css/bootstrap.min.css'>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <link rel="stylesheet" href="../angular-modal/modal.css">
+
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
         <script src="../angular/angular.min.js"></script>
         <script src="../angular-route/angular-route.min.js"></script>
         <script src="../angular-middleware/dist/angular-middleware.min.js"></script>
