--- a/client/fruits/admin.fruits.view.html
+++ b/client/fruits/admin.fruits.view.html
@@ -26,7 +26,7 @@
 
     <div class="thumbnail fruit-item col-xs-4 col-sm-3 col-md-2 col-lg-2" ng-repeat="fruit in fruits | filter:search" ng-click="goToFruit(categoryName, fruit.id)">
         <div class="text-center" ng-if="fruit.image">
-            <img src="../uploads/{{fruit.image}}" height="100">
+            <img ng-src="../uploads/{{fruit.image}}" height="100">
         </div>
         <div class="text-center" ng-else>
             <img src="../uploads/no-image.png" height="100">
