--- a/client/order/orderForm.html
+++ b/client/order/orderForm.html
@@ -45,8 +45,9 @@
         <div class="form-group row">
             <label for="creditCard" class="col-md-offset-1 col-sm-2 control-label required-field">Credit Card</label>
             <div class="col-sm-8">
-                <input ng-model="order.credit_card" type="number" id="creditCard" name="creditCard" class="form-control input-sm chat-input margin_bottom"
-                       placeholder="Credit Card" required>
+                <input ng-model="order.credit_card" type="number" id="creditCard" name="creditCard" class="form-control input-sm chat-input margin_bottom" placeholder="Credit Card" required
+                       pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$">
+                       <!--this regex matches Visa, MasterCard, American Express, Diners Club, Discover, and JCB cards-->
                 <span class="pull-right text-danger" ng-show="orderForm.creditCard.$touched && orderForm.creditCard.$invalid">Credit card is required</span>
             </div>
         </div>
