--- a/client/auth/registerForm.html
+++ b/client/auth/registerForm.html
@@ -26,14 +26,15 @@
                     <label for="userPassword" class="col-sm-3 control-label required-field">Password</label>
                     <div class="col-sm-9">
                         <input ng-model="user.password" type="password" id="userPassword" name= "userPassword" class="form-control input-sm chat-input margin_bottom"
-                               value = "" placeholder="Password" title="Five or more characters" >
-                             </div>
+                               pattern="^\S{5,}$" value = "" placeholder="Password" title="Five or more characters" required>
+                        <span class="text-danger" ng-show="frmLogin.userPassword.$touched && frmLogin.userPassword.$invalid">Must contain 5 or more characters</span>
+                    </div>
                 </div>
                 <div class="form-group row">
-                    <label for="userPasswordConfirm" class="col-sm-3 control-label ">Password Confirm</label>
+                    <label for="userPasswordConfirm" class="col-sm-3 control-label required-field">Password Confirm</label>
                     <div class="col-sm-9">
                         <input ng-model="user.passwordConfirm" type="password" id="userPasswordConfirm" name= "userPasswordConfirm" class="form-control input-sm chat-input margin_bottom"
-                                value = "" placeholder="Password Confirm" title="Five or more characters" >
+                               pattern="^\S{5,}$" value = "" placeholder="Password Confirm" title="Five or more characters" required>
                         <span class="text-danger" ng-show="frmLogin.userPasswordConfirm.$touched && frmLogin.userPasswordConfirm.$invalid">Must contain 5 or more characters</span>
                     </div>
                 </div>
@@ -71,7 +72,7 @@
                     <label for="userStreet" class="col-sm-2 control-label required-field">Street</label>
                     <div class="col-sm-10">
                         <input ng-model="user.street" type="text" id="userStreet" name="userStreet" class="form-control input-sm chat-input margin_bottom"
-                               placeholder="Street" >
+                               placeholder="Street" required>
                         <span class="pull-right text-danger" ng-show="frmLogin.userStreet.$touched && frmLogin.userStreet.$invalid">Street is required</span>
                     </div>
                 </div>
