--- a/client/order/order.view.html
+++ b/client/order/order.view.html
@@ -13,10 +13,10 @@
     </div>
 </form>
 
-<div id="frmOrder" class="thumbnail fruit-item pull-right">
-    <div ng-include="'order/orderForm.html'"></div>
-</div>
-
 <div class="container pull-left">
     <div ng-include="'cart/cart.order.view.html'"></div>
+</div>
+
+<div id="frmOrder" class="thumbnail fruit-item pull-left">
+    <div ng-include="'order/orderForm.html'"></div>
 </div>
